<resources>
    <string name="app_name">Driver sync-Book your Driver</string>
    <string name="description_of_image">Description of image</string>
    <string name="choose_origin">choose origin</string>
    <string name="admin_login">Admin Dashboard </string>
    <string name="drivers">Drivers</string>
    <string name="availability">Availability</string>
    <string name="price_details">Price Details</string>
    <string name="select_origin">*select origin</string>
    <string name="select_destination">*select destination</string>
    <string name="choose_destination">Choose destination</string>
    <string name="select_days">*select days</string>
    <string name="choose_days">Choose days</string>
    <string name="total_amount">Total Amount</string>
    <string name="enter_total_amount">Enter total amount</string>
    <string name="vehicle_tracking">Vehicle Tracking</string>
    <string name="track">Track</string>
    <string name="todo">TODO</string>
    <string name="choose_originn">Choose origin</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="hyundai_xcent" />
    <string name="car_swift" />
    <string name="car_zest" />
    <string name="car_ertiga" />
    <string name="tata_ertiga">TATA Ertiga</string>
    <string name="tata_zest">TATA Zest</string>
    <string name="swift">Swift</string>
    <string name="hyundai_xcentt">Hyundai Xcent</string>
    <string name="available_cars">Available Cars</string>
    <string name="driver_dashboard">Driver Dashboard</string>
    <string name="driver_login">Driver Login</string>
    <string name="user_login">User Login</string>
    <string name="admin_logina">Admin Login</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="signup">signup</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="user_loginaa">User Login</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_details">Add Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_experience_years">Enter experience years</string>
    <string name="enter_contact_no">Enter Contact.no</string>
    <string name="submit">Submit</string>
    <string name="draggable_image">Draggable Image</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="experience">Experience :</string>
    <string name="contact_number">Contact number :</string>
    <string name="jan_01_2025">JAN 01 2025</string>
    <string name="contact_number1">Contact Number</string>
</resources>