<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".DriverDetails">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/add_details"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:background="@drawable/ne"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:padding="5dp"
        android:paddingHorizontal="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextViewEdits"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ne"
        android:hint="@string/enter_experience_years"
        android:inputType="number"
        android:padding="5dp"
        android:paddingHorizontal="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ne"
        android:hint="@string/enter_contact_no"
        android:inputType="number"
        android:padding="5dp"
        android:paddingHorizontal="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TextViewEdits" />

    <Button
        android:layout_width="258dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonbackround"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>