<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context=".UserScreens.MoreDetails">

    <ImageButton
        android:id="@+id/backButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="381dp"
        android:layout_height="576dp"
        android:layout_margin="16dp"
        android:layout_marginTop="34dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/ne"
            android:padding="16dp">

            <ImageView
                android:id="@+id/draggableImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/draggable_image"
                android:src="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/draggableName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="313dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/draggableage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/age"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="313dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/draggableyears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/experience"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="313dp"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/draggablenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/contact_number"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="313dp"
                android:layout_height="35dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>


