<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/bb">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goto_alogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="272dp"
        android:textSize="18sp"
        android:background="@drawable/buttonbackround"
        android:text="@string/admin_logina"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goto_ulogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonbackround"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goto_alogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goto_dlogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonbackround"
        android:text="@string/driver_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goto_ulogin" />


</androidx.constraintlayout.widget.ConstraintLayout>